--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ body {
   font-family: sans-serif;
   text-align: center;
   background-color: brown;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
