--- a/src/styles.css
+++ b/src/styles.css
@@ -85,3 +85,27 @@ body {
   background: lightblue;
   grid-column: 1 / 2;
 } */
+p {
+  height: 90%;
+  width: 90%;
+  border: 1px solid red;
+  font-size: 1.5rem;
+}
+aside,
+article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+aside p,
+article p {
+  padding: 1rem;
+  text-align: justify;
+}
+.flexGrow {
+  flex-grow: 1;
+}
+.flexNone {
+  flex-grow: unset;
+}
